# 2021-PRP-Program

./: MPEG-4视频编码算法研究.caj  README.md  压缩率对精度的影响.xlsx  压缩算法文献总结.md  基于MPEG_4的流媒体视频编码算法的设计与实现_常永哲.caj  学习笔记.md  常用指令.txt
YOLO/: detect.py  quickstartInference.py  压缩率-准确率.xlsx
YOLO/Cam/Cam/: 代码.txt
YOLO/Cam/Cam/截图/: 压缩率-时间图.xlsx
YOLO/Xvid实验记录/: 实验记录.md
YOLO/utils/: datasets.py  plots.py
compress test py/: face.py  facepicture.py  facetracking.py  facevideo.py  getFace.py  model.py  selectiveSearch.py  test.py  videocompare.py  准确率.xlsx
compress_test/: CMakeLists.txt  main.cpp
cvas/: .gitignore  CMakeCache.txt  CMakeLists.txt  CVAS.cbp  Makefile  cmake_install.cmake  run  run.cpp
cvas/include/: car_status.hpp  data.hpp
cvas/src/: car_status.cpp  data.cpp
face recognition/: Image_Dataset_Generator.py  face_photo_recognizer.py  face_recognizer.py
flow_test/: CMakeLists.txt  data.hpp  main.cpp
flow_test/cvas-master/: README.md
flow_test/cvas-master/include/: car_status.hpp  data.hpp  error_flags.hpp
flow_test/cvas-master/src/: car_status.cpp  data.cpp
flow_test2/: CMakeLists.txt  optical_flow_example.cpp  run.cpp
flow_test2/src/: car_status.cpp
sender/: CMakeLists.txt  sender.cpp  sender_zhy.cpp  server_zhy.cpp
结项材料/: 心得 赵瀚云.docx  论文.docx
